--- a/app/src/main/res/layout/activity_clova_wifiscanlist.xml
+++ b/app/src/main/res/layout/activity_clova_wifiscanlist.xml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/search_network_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ネットワークを検索しています..." />
+
+    <ListView
+        android:id="@+id/ui_clova_wifi_scanlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:divider="@null" />
 
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/search_network_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ネットワークを検索しています..." />
-
-        <ListView
-            android:id="@+id/ui_clova_wifi_scanlist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@null"/>
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
