--- a/app/src/main/res/layout/activity_clova_details.xml
+++ b/app/src/main/res/layout/activity_clova_details.xml
@@ -32,19 +32,18 @@
             android:id="@+id/device_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="left|center"
-            android:textColor="#000000"
-            android:textSize="16dp"
-            android:text="デバイス名" />
+            android:layout_weight="1"
+            android:text="デバイス名"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/device_name_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
-            android:textSize="16dp"
-            android:text="不明" />
+            android:text="不明"
+            android:textSize="16dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -58,17 +57,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
             android:layout_weight="1"
-            android:textColor="#000000"
-            android:textSize="16dp"
-            android:text="MACアドレス" />
+            android:text="MACアドレス"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/device_wifi_mac_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
-            android:textSize="16dp"
-            android:text="不明" />
+            android:text="不明"
+            android:textSize="16dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -82,7 +80,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="left|center"
-            android:textColor="#000000"
             android:textSize="16dp"
             android:text="シリアル番号" />
 
@@ -106,7 +103,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="left|center"
-            android:textColor="#000000"
             android:textSize="16dp"
             android:text="ファームウェアバージョン" />
 
@@ -130,7 +126,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="left|center"
-            android:textColor="#000000"
             android:textSize="16dp"
             android:text="hasClovaToken" />
 
