--- a/app/src/main/res/layout/dialog_clova_details.xml
+++ b/app/src/main/res/layout/dialog_clova_details.xml
@@ -1,7 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="15dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="left|center"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:text="デバイス名" />
+
+        <TextView
+            android:id="@+id/clova_devicename_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:textSize="16dp"
+            android:text="不明" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center"
+            android:layout_weight="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:text="MACアドレス" />
+
+        <TextView
+            android:id="@+id/clova_macaddress_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:textSize="16dp"
+            android:text="不明" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="left|center"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:text="シリアル番号" />
+
+        <TextView
+            android:id="@+id/clova_serial_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:textSize="16dp"
+            android:text="不明" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="left|center"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:text="ファームウェアバージョン" />
+
+        <TextView
+            android:id="@+id/clova_firmwarever_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:textSize="16dp"
+            android:text="不明" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="left|center"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:text="hasClovaToken" />
+
+        <TextView
+            android:id="@+id/clova_hasclovatoken_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:textSize="16dp"
+            android:text="不明" />
+    </LinearLayout>
 
 </LinearLayout>
